gcc/testsuite/gdc.test/runnable/imports/circularA.d
module imports.circularA;
import circular;

class A
{
    struct
    {
        Tclass a;
        Tstruct b;
    }
    union
    {
        Tclass c;
        Tstruct d;
    }
}

struct B
{
    struct
    {
        Tclass a;
        Tstruct b;
    }
    union
    {
        Tclass c;
        Tstruct d;
    }
}
