gcc/testsuite/gdc.test/fail_compilation/imports/a10528.d
private enum string a = "asdfgh";
private enum { b = "asdfgh" }

struct S { private enum string c = "qwerty"; }
class  C { private enum string d = "qwerty"; }
